force-app/main/default/objects/Survey__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Walking</fullName>
            </value>
            <value>
                <fullName>Marathon</fullName>
            </value>
            <value>
                <fullName>Half Marathon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>