force-app/main/default/objects/Survey__c/fields/Feedback_English__c.field-meta.xml
<CustomField>
    <fullName>Feedback_English__c</fullName>
    <label>Feedback (English)</label>
    <type>TextArea</type>
</CustomField>