force-app/main/default/objects/Survey__c/fields/Feedback_Local__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Local__c</fullName>
    <label>Feedback (Local)</label>
    <type>TextArea</type>
</CustomField>